project(SE)
option(BUILD_ANDROID "ON for building android edition" ON)
#SET(CMAKE_CXX_FLAGS "-std=c++11")
#add_definitions("-D_DEBUG")
if(MSVC)
	add_definitions("/EHsc")
else()
	add_definitions("-std=c++11")
	add_definitions("-Wno-invalid-offsetof")
endif()
if(BUILD_ANDROID)
add_definitions("-DBUILD_ANDROID")
endif()
add_subdirectory(src)
#add_subdirectory(lib)
SET (CMAKE_INSTALL_PREFIX "${SE_SOURCE_DIR}/")
install(DIRECTORY lib/glew/GL DESTINATION include PATTERN "*.cpp" EXCLUDE)
